# MyNotes

./: .editorconfig  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
audio-recorder/: build.gradle.kts
audio-recorder/src/main/cpp/: CMakeLists.txt  lame-jni.cpp  mpg-jni.cpp
audio-recorder/src/main/java/com/shashluchok/audiorecorder/audio/: AudioPlayer.kt  AudioPlayerImpl.kt  AudioRecorder.kt  AudioRecorderImpl.kt  DataSource.kt  (+1 more)
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
media-notes-compose/: .gitignore  build.gradle.kts
media-notes-compose/src/main/: AndroidManifest.xml
media-notes-compose/src/main/java/com/shashluchok/medianotes/: MediaNotes.kt
media-notes-compose/src/main/res/drawable/: ic_pen.xml
media-notes-compose/src/main/res/raw/: lottie_copy.lottie  lottie_copy_dark.lottie  lottie_loader.lottie  lottie_player.lottie  lottie_player_dark.lottie  lottie_save_dark.lottie
media-notes-compose/src/main/res/values/: strings.xml
media-notes-compose/src/main/res/values-de/: strings.xml
media-notes-compose/src/main/res/values-en/: strings.xml
sampleApp/: build.gradle.kts
sampleApp/src/main/: AndroidManifest.xml
sampleApp/src/main/res/drawable/: ic_launcher_foreground.xml
sampleApp/src/main/res/values/: strings.xml  themes.xml
sampleApp/src/main/res/values-night/: themes.xml
sampleApp/src/main/res/values-night-v27/: themes.xml
sampleApp/src/main/res/values-night-v29/: themes.xml
sampleApp/src/main/res/values-v27/: themes.xml
sampleApp/src/main/res/values-v29/: themes.xml
(+130 files in other folders)
